ghc-4335c07/testsuite/tests/indexed-types/should_compile/Overlap1.hs
{-# LANGUAGE TypeFamilies #-}

module Overlap1 where

type family F a where
  F Int = Int
  F a = Bool

g :: F Int
g = 5

h :: F Char
h = False
